capabilities/grafana/manifests/networkpolicies/egress-tempo.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-tempo-egress
spec:
  podSelector: {}
  policyTypes:
  - Egress
  # Allow access to zipkin
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: tempo
      podSelector:
        matchLabels:
          app.kubernetes.io/name: tempo
    ports:
    - port: 9411
